k8s/base-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME_PLACEHOLDER
spec:
  selector:
    app: SERVICE_NAME_PLACEHOLDER
  ports:
    - port: PORT_PLACEHOLDER
      targetPort: PORT_PLACEHOLDER
